fix positioning of 'draft' on mobile

--- a/src/OpenSessionOverview/open-session-overview.less
+++ b/src/OpenSessionOverview/open-session-overview.less
@@ -155,7 +155,10 @@
     .subheading();
     position: absolute;
     color: @red;
-    top: -15px;
+    top: -45px;
+    @media @nonmobile {
+      top: -15px;
+    }
   }
 
   .render-mobile & {
